# styles

./: .gitignore  README.md  config.py  cron_setup.sh  dashboard.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.sh  sync.py
.termux-boot/: start-scraper.sh
ai/: processor.py
data/evidence/: _audit_summary.json
data/output/: _validation_report.json  _validation_samples.json  adika_products.json  castro_products.json  cstyle_products.json  hodula_products.json  lidor_bar_products.json  renuar_products.json  sde_bar_products.json  shoshi_tamam_products.json  terminal_x_products.json  zara_products.json
db/: firestore.py
emulator/: firebase.json
engine/: __init__.py
engine/adapters/: __init__.py  _shopify_mixin.py  adika.py  base.py  castro.py  cstyle.py  hodula.py  lidor_bar.py  renuar.py  sde_bar.py  shoshi_tamam.py  terminal_x.py  zara.py
engine/cli/: __init__.py  __main__.py  commands.py  sync_commands.py
engine/extraction/: __init__.py  dom_selector.py  heuristic.py  json_ld.py  script_payload.py  sitemap.py
engine/firestore/: __init__.py  manager.py
engine/http/: __init__.py  client.py
engine/normalization/: images.py  (+4 more)
monitor/: __init__.py  app.py
scrapers/: base.py  castro.py  fox.py  lidor.py  next_il.py  registry.py  renoir.py  renuar.py  shein.py  zara.py
scripts/: e2e_proof.py  evidence_audit.py  live_validate.py  validate_all_sources.py
tests/: conftest.py  test_cli.py  test_extraction.py  test_http_client.py  test_normalization.py  test_output.py  test_schemas.py  test_validation.py
utils/: logger.py  rate_limiter.py
(+104 files in other folders)
