[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dostyle-scraper"
version = "1.0.0"
description = "Production-grade fashion scraping engine for DoStyle aggregation project"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.3",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
firebase = ["firebase-admin>=6.4.0"]
ai      = ["google-generativeai>=0.8.3"]
dev     = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
dostyle         = "engine.cli.commands:cli"
dostyle-scraper = "engine.cli.commands:cli"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source  = ["engine"]
omit    = ["engine/cli/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
